Fix alignment.

--- a/src/pane.css
+++ b/src/pane.css
@@ -30,7 +30,7 @@ h2 {
 }
 .attribute-history-item_new-value, 
 .attribute-history-item_action-type {
-    padding-left: 5px;
+    padding-left: 2px;
 }
 .attribute-history-item_new-value {
     color: rgb(196, 26, 22);
